# ShipmentAPI

./: .env  .gitignore  Dockerfile  Makefile  app.py  docker-compose.yaml  poetry.toml  pyproject.toml  readme.md  setup.cfg  setup.py
src/: __init__.py
src/commons/: cache.py  database.py  dependencies.py  entity.py  models.py  scripts.py  weather_client.py
src/routes/: shipment_routes.py
src/schemas/: shipment_schema.py
src/services/: __init__.py  shipment_service.py  weather_service.py
tests/: __init__.py
tests/commons/: factories.py
tests/routes/: __init__.py  test_shipment_routes.py
tests/schemas/: test_shipment_schema.py
tests/services/: __init__.py  test_shipment_services.py  test_weather_service.py
